# OpenIronShare

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
.sqlx/: query-199311075d5f1e5476e1dbc8b9d8222f869ea7eb78bf89d95fb4c2e63fd6d6bf.json  query-452170cc5dee21ace227ec9fd9b58e8328f64fa86bfbb1d907d9d3f0417f6521.json  query-7f4316b0be4d7135bcbfd5b77ceb97f40eae88ce58119d03b1861d23007432cf.json  query-80232006de9b352f0bfb23cc72a0085595b4d8b9513838cb09800e9a61e9304b.json  query-c4c38eb548436b6992c2daca656f326ffd6f2bce93cb3de3ff54e23f4720bc1c.json
deploy/: install.sh  ironshare.service  monitor-storage.sh
docs/: README.md  api-reference.md  architecture.md  deployment.md  development.md  mcp-integration.md  security.md
migrations/: 20240101120000_create_secrets_table.sql
nginx/: ironshare.conf
src/: config.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs
static/: crypto.js
tests/: api_tests.rs
