[package]
name = "ironshare"
version = "0.1.0"
edition = "2026"

[dependencies]
# The Core Web Framework
axum = { version = "0.7", features = ["macros", "form"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "set-header"] }
tower_governor = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Embedded Assets for Single Binary
rust-embed = { version = "8.0", features = ["include-exclude"] }

# Cryptography (Server Side Hashing)
ring = "0.17"

# Structured Data
time = { version = "0.3", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "time", "migrate"] }

# NPWD (URL-safe IDs)
nanoid = "0.4"
base64 = "0.22.1"

[dev-dependencies]
http-body-util = "0.1.3"
